@@ -1,0 +1,26 @@
+#!/bin/bash
+
+# HIA
+# Results Parser
+
+cd /var/www/cjdns/hia/watchlist/ || exit 1
+
+# Run parser scripts to further test and verify services
+(
+echo "hia-parse begins"
+
+ls hia-parse-* 2>> /dev/null | \
+while read F
+do
+  if [ -x "$F" ]
+  then
+    echo "-Calling $F"
+    ./$F
+    echo "-Completed $F"
+  fi
+done
+echo "hia-parse complete"
+
+) 2>&1 | tee -a hia-parse.log
+
+#EOF#
